--- a/index.html
+++ b/index.html
@@ -19,8 +19,17 @@
             <input id="hfAnswerBlock" placeholder=" " type="text" disabled><br><br>
             <button id="hfSubmit">Calculate</button>
         </div>
+        <br>
         <div class="ambiguousCase"> 
-            <!---->
+            <h3>Ambiguous Case</h3>
+            <label>a</label><br>
+            <input id="acA" type="text"><br><br>
+            <label>b</label><br>
+            <input id="acB" type="text"><br><br>
+            <label>Angle A</label><br>
+            <input id="acAA" type="text"><br><br>
+            <input id="acAnswerBlock" placeholder=" " type="text" disabled><br><br>
+            <button id="acSubmit">Calculate</button>
         </div>
         <div class="newtonsMethod">
             <!---->
