finish 2nd period

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <div class="ambiguousCase"> 
             <h3>Ambiguous Case</h3>
             <label>a</label><br>
-            <input id="acA" type="text"><br><br>
+            <input id="acA" type="number"><br><br>
             <label>b</label><br>
-            <input id="acB" type="text"><br><br>
+            <input id="acB" type="number"><br><br>
             <label>Angle A</label><br>
-            <input id="acAA" type="text"><br><br>
+            <input id="acAA" type="number"><br><br>
             <input id="acAnswerBlock" placeholder=" " type="text" disabled><br><br>
             <button id="acSubmit">Calculate</button>
         </div>
