--- a/index.html
+++ b/index.html
@@ -1,43 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" rel="stylesheet" type="text/css" />
     <title>Assignment 3</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="parent">
-        <div class="heronsFormula">
-            <h3>Heron's Formula</h3>
-            <label>a</label><br>
-            <input id="hfA" type="text"><br><br>
-            <label>b</label><br>
-            <input id="hfB" type="text"><br><br>
-            <label>c</label><br>
-            <input id="hfC" type="text"><br><br>
-            <input id="hfAnswerBlock" placeholder=" " type="text" disabled><br><br>
-            <button id="hfSubmit">Calculate</button>
-        </div>
-        <br>
-        <div class="ambiguousCase"> 
-            <h3>Ambiguous Case</h3>
-            <label>a</label><br>
-            <input id="acA" type="number"><br><br>
-            <label>b</label><br>
-            <input id="acB" type="number"><br><br>
-            <label>Angle A</label><br>
-            <input id="acAA" type="number"><br><br>
-            <input id="acAnswerBlock" placeholder=" " type="text" disabled><br><br>
-            <button id="acSubmit">Calculate</button>
-        </div>
-        <div class="newtonsMethod">
-            <!---->
-        </div>
-        <div class="polynomialFormula">
-            <!---->
-        </div>
+      <div class="heronsFormula">
+        <h3>Heron's Formula</h3>
+        <label>a:</label><br />
+        <input id="hfA" type="number"/><br><br>
+        <label>b:</label><br />
+        <input id="hfB" type="number"/><br><br>
+        <label>c:</label><br />
+        <input id="hfC" type="number"/><br><br>
+        <input id="hfAnswerBlock" placeholder=" " type="text" disabled/><br><br>
+        <button id="hfSubmit">Calculate</button>
+      </div>
+      <br />
+      <div class="ambiguousCase">
+        <h3>Ambiguous Case</h3>
+        <label>a:</label><br />
+        <input id="acA" type="number" /><br><br>
+        <label>b:</label><br />
+        <input id="acB" type="number" /><br><br>
+        <label>Angle A:</label><br />
+        <input id="acAA" type="number" /><br><br>
+        <input id="acAnswerBlock" placeholder=" " type="text" disabled><br><br>
+        <button id="acSubmit">Calculate</button>
+      </div>
+      <br />
+      <div class="newtonsMethod">
+        <h3>Newtons Method</h3>
+        <label>Root Guess:</label><br />
+        <input id="nmG" type="number" /><br><br>
+        <input
+          id="nmAnswerBlock"
+          placeholder=" "
+          type="text"
+          disabled
+        /><br><br>
+        <button id="nmSubmit">Calculate</button>
+      </div>
+      <div class="polynomialFormula">
+        <h3>Polynomial Formula</h3>
+            <label>Coefficients:</label><br>
+            <input id="pfC" type="number"><br><br>
+
+            <label>Exponents:</label><br>
+            <input id="pfE" type="number"><br><br>
+
+            <label>x Values:</label><br>
+            <input id="pfX" type="number"><br><br>
+
+            <label>Polynomial Function(result):</label><br>
+            <input id="pfFunction" placeholder=" " type="text" disabled><br><br>
+
+            <label>Polynomial Evaluation</label><br>
+            <input id="pfEval" type="number" disabled><br><br>
+            
+            <button id="pfSubmit">Calculate</button>
+      </div>
     </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
