--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <label>b:</label><br />
         <input id="acB" type="number" /><br><br>
         <label>Angle A:</label><br />
-        <input id="acAA" type="number" /><br><br>
+        <input id="acAngleA" type="number" /><br><br>
         <input id="acAnswerBlock" placeholder=" " type="text" disabled><br><br>
         <button id="acSubmit">Calculate</button>
       </div>
