pushing for 2nd period

--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
       <div class="heronsFormula">
         <h3>Heron's Formula</h3>
         <label>a:</label><br />
-        <input id="hfA" type="number"/><br><br>
+        <input id="hfA" type="number" placeholder="0"><br><br>
         <label>b:</label><br />
-        <input id="hfB" type="number"/><br><br>
+        <input id="hfB" type="number" placeholder="0"><br><br>
         <label>c:</label><br />
-        <input id="hfC" type="number"/><br><br>
+        <input id="hfC" type="number" placeholder="0"><br><br>
         <input id="hfAnswerBlock" placeholder=" " type="text" disabled/><br><br>
         <button id="hfSubmit">Calculate</button>
       </div>
       <br />
       <div class="ambiguousCase">
         <h3>Ambiguous Case</h3>
-        <label>a:</label><br />
-        <input id="acA" type="number" /><br><br>
-        <label>b:</label><br />
-        <input id="acB" type="number" /><br><br>
-        <label>Angle A:</label><br />
-        <input id="acAngleA" type="number" /><br><br>
+        <label>a:</label><br>
+        <input id="acA" type="number" placeholder="0"><br><br>
+        <label>b:</label><br>
+        <input id="acB" type="number" placeholder="0"><br><br>
+        <label>Angle A:</label><br>
+        <input id="acAngleA" type="number" placeholder="0"><br><br>
         <input id="acAnswerBlock" placeholder=" " type="text" disabled><br><br>
         <button id="acSubmit">Calculate</button>
       </div>
@@ -36,24 +36,19 @@
         <h3>Newtons Method</h3>
         <label>Root Guess:</label><br />
         <input id="nmG" type="number" /><br><br>
-        <input
-          id="nmAnswerBlock"
-          placeholder=" "
-          type="text"
-          disabled
-        /><br><br>
+        <input id="nmAnswerBlock" placeholder=" " type="text" disabled/><br><br>
         <button id="nmSubmit">Calculate</button>
       </div>
       <div class="polynomialFormula">
         <h3>Polynomial Formula</h3>
             <label>Coefficients:</label><br>
-            <input id="pfC" type="number"><br><br>
+            <input id="pfC" type="number" placeholder="a b c"><br><br>
 
             <label>Exponents:</label><br>
-            <input id="pfE" type="number"><br><br>
+            <input id="pfE" type="number" placeholder="2 1 0"><br><br>
 
             <label>x Values:</label><br>
-            <input id="pfX" type="number"><br><br>
+            <input id="pfX" type="number" placeholder="0"><br><br>
 
             <label>Polynomial Function(result):</label><br>
             <input id="pfFunction" placeholder=" " type="text" disabled><br><br>
