--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.css" integrity="sha384-nB0miv6/jRmo5UMMR1wu3Gz6NLsoTkbqJghGIsx//Rlm+ZU03BU6SQNC66uf4l5+" crossorigin="anonymous">
-    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.js" integrity="sha384-7zkQWkzuo3B5mTepMUcHkMB5jZaolc2xDwL6VFqjFALcbeS9Ggm/Yr2r3Dy4lfFg" crossorigin="anonymous"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/contrib/auto-render.min.js" integrity="sha384-43gviWU0YVjaDtb/GhzOouOXtZMP/7XUzwPTstBeZFe/+rCMvRwr4yROQP43s0Xk" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
     <title>Assignment 3</title>
   </head>
   <body>
@@ -43,6 +40,8 @@
       <br>
       <div class="newtonsMethod">
         <h3>Newtons Method</h3>
+        <label>Function:</label><br>
+        <input id="nmF" type="number"><br><br>
         <label>Root Guess:</label><br>
         <input id="nmG" type="number"><br><br>
         <input id="nmAnswerBlock" placeholder=" " type="text" disabled><br><br>
@@ -56,7 +55,7 @@
         <label>Exponents:</label><br>
         <input id="pfE" type="text" placeholder="2 1 0"><br><br>
 
-        <label>x Values:</label><br>
+        <label>x Value:</label><br>
         <input id="pfX" type="text" placeholder="0"><br><br>
 
         <label>Polynomial Function(result):</label><br>
