--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
       </div>
       <br>
       <div class="newtonsMethod">
-        <h3>Newtons Method</h3>
-        <label>Function:</label><br>
-        <input id="nmF" type="number"><br><br>
+        <h3>Newtons Method(W.I.P)</h3>
         <label>Root Guess:</label><br>
         <input id="nmG" type="number"><br><br>
         <input id="nmAnswerBlock" placeholder=" " type="text" disabled><br><br>
@@ -58,7 +56,7 @@
         <label>x Value:</label><br>
         <input id="pfX" type="text" placeholder="0"><br><br>
 
-        <label>Polynomial Function(result):</label><br>
+        <label>Polynomial Function:</label><br>
         <input id="pfFunction" placeholder=" " type="text" disabled><br><br>
 
         <label>Polynomial Evaluation</label><br>
