started newtons method, now i know how to calculate derivatives :)

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       <br>
       <div class="newtonsMethod">
         <h3>Newtons Method(W.I.P)</h3>
+        <label>Use Polynomial Formula Inputs</label><br><br>
         <label>Root Guess:</label><br>
         <input id="nmG" type="number"><br><br>
         <input id="nmAnswerBlock" placeholder=" " type="text" disabled><br><br>
