technically finished, now im gonna polish this code

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="heronsFormula">
         <h3>Heron's Formula</h3>
         <label>a:</label><br>
-        <input id="hfA" type="number" placeholder="0"><br><br>
+        <input id="hfA" type="number" value="0"><br><br>
 
         <label>b:</label><br>
         <input id="hfB" type="number" placeholder="0"><br><br>
@@ -40,12 +40,9 @@
       <br>
       <div class="newtonsMethod">
         <h3>Newtons Method(W.I.P)</h3>
-<<<<<<< HEAD
         <label>Use Polynomial Formula Inputs</label><br><br>
-=======
->>>>>>> 1cc70e78ddf499f1dfe714dcf91ab4a227eccf3e
         <label>Root Guess:</label><br>
-        <input id="nmG" type="number"><br><br>
+        <input id="nmG" type="number" placeholder="0"><br><br>
         <input id="nmAnswerBlock" placeholder=" " type="text" disabled><br><br>
         <button id="nmSubmit">Calculate</button>
       </div>
